--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Gherardo Varando
 description: Gherardo personal web page
 author: Gherardo Varando
-plugins: 
+plugins_dir: 
    - jemoji
 
 default: 
