--- a/_data/links.yml
+++ b/_data/links.yml
@@ -6,3 +6,5 @@
   link : https://dblp1.uni-trier.de/pers/hd/v/Varando:Gherardo
 - name : ResearchGate
   link : https://www.researchgate.net/profile/Gherardo_Varando
+- name : arXiv
+  link : https://arxiv.org/a/varando_g_1.html
