--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,3 +1,5 @@
+- name : github
+  link: https://github.com/gherardovarando/
 - name : ORCID
   link : https://orcid.org/0000-0002-6708-1103 
 - name : Scholar
