--- a/_data/info.yml
+++ b/_data/info.yml
@@ -1,5 +1,9 @@
 name: Gherardo Varando
-position: PostDoc at the Department of Mathematical Science, 
-            University of Copenhagen.
-     
+position: postdoc
+institution:
+            name: Universitat de valencia 
+            link: http://www.uv.es/ 
+lab: 
+    name: Image and Signal Processing Group 
+    link: https://isp.uv.es/
 
