--- a/_data/info.yml
+++ b/_data/info.yml
@@ -10,3 +10,18 @@ interests:
     - probabilistic graphical models
     - graphical models for dynamical systems
     - staged event trees and chain event graphs
+email:
+        - gherardo.varando@uv.es
+links:
+        - name : github
+          link: https://github.com/gherardovarando/
+        - name : ORCID
+          link : https://orcid.org/0000-0002-6708-1103 
+        - name : Scholar
+          link : https://scholar.google.es/citations?user=ALjiTg0AAAAJ
+        - name : dblp
+          link : https://dblp1.uni-trier.de/pers/hd/v/Varando:Gherardo
+        - name : ResearchGate
+          link : https://www.researchgate.net/profile/Gherardo_Varando
+        - name : arXiv
+          link : https://arxiv.org/a/varando_g_1.html
