--- a/_config.yml
+++ b/_config.yml
@@ -50,3 +50,5 @@ links:
       url: https://orcid.org/0000-0002-6708-1103
     - name: github
       url: https://github.com/gherardovarando
+    - name: UV
+      url: https://www.uv.es/uvweb/universitat/ca/fitxa-persona-1285950309813.html?p2=varando
